# calendar

./: .gitignore  README.md  flake.nix  package.json  pnpm-lock.yaml  renovate.json  rust-toolchain.toml  updater.json  updates.txt
.github/workflows/: release.yml
src/: App.tsx  dialogs.tsx  interfaces.tsx  utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
