[package]
name = "calendar"
version = "0.0.0"
description = "The simple calendar that integrates with Action"
authors = ["MisileLaboratory"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.14", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.111"
tauri-plugin-fs = "2.0.0-alpha.7"
tauri-plugin-dialog = "2.0.0-alpha.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
